Added asterisks to main title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <img src="img/chef-hat.png" alt="chef hat">
-            <h1>Recipe Collection</h1>
+            <h1>*Recipe Collection*</h1>
         </header>
         <main>
             <article id="cookies" class="card">
